# rust-github

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/api/: server.rs
src/api/handlers/: gist_handler.rs  mod.rs
src/application/: app.rs  mod.rs  state.rs
src/model/: mod.rs  user_gist.rs
tests/tests/: lib.rs
